[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/objects/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/player/centerPoint.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/player/tip.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/player/base.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/shootEffect.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Node/Tip:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player/Node/ShootEffect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "shoot"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Node/Tip:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Vector2( 0.75, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player/Node/ShootEffect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.08, 0.22 ),
"transitions": PoolRealArray( 1, 1, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.823529 ), Color( 1, 1, 1, 0.352941 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Player" type="RigidBody2D"]
mass = 10.0
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Node" type="Node2D" parent="."]

[node name="Base" type="Sprite" parent="Node"]
texture = ExtResource( 4 )

[node name="Tip" type="Sprite" parent="Node"]
texture = ExtResource( 3 )
offset = Vector2( 48, 0 )

[node name="CenterPoint" type="Sprite" parent="Node"]
texture = ExtResource( 2 )

[node name="ShootEffect" type="Sprite" parent="Node"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 5 )
offset = Vector2( 64, 0 )

[node name="Pointer" type="Node2D" parent="Node"]

[node name="InvulTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RegenTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
anims/RESET = SubResource( 2 )
anims/shoot = SubResource( 3 )
